<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserPreferences">

        <EditText
            android:hint="@string/first_name"
            android:autofillHints="string"
            android:inputType="text|textCapWords|textAutoCorrect"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/firstName"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            />

        <EditText
            android:hint="@string/last_name"
            android:autofillHints="string"
            android:inputType="text|textCapWords|textAutoCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lastName"
            android:layout_below="@+id/firstName"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/firstName"
            android:layout_alignEnd="@+id/firstName"
            />

        <EditText
            android:hint="@string/email"
            android:autofillHints="string"
            android:inputType="text|textEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:layout_below="@+id/lastName"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/lastName"
            android:layout_alignEnd="@+id/lastName"

            />

        <EditText
            android:hint="@string/phone"
            android:autofillHints="Phone Number"
            android:inputType="text|phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phone"
            android:layout_below="@+id/email"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/email"
            android:layout_alignEnd="@+id/email"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/saveButton"
            android:layout_below="@+id/phone"
            android:layout_alignParentStart="true"
             />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>